syntax = "proto3";


import "google/protobuf/descriptor.proto";
import "google/protobuf/type.proto";
extend google.protobuf.FileOptions {
    string appId = 60001;
    string appName = 60002;
}
extend google.protobuf.ServiceOptions {
    RequestMapping requestMapping = 70001;
}
extend google.protobuf.MethodOptions {
    RequestMapping requestMapping = 70002;
}
enum Method {
    GET = 0;
    HEAD = 1;
    POST = 2;
    PUT = 3;
    PATCH = 4;
    DELETE = 5;
    OPTIONS = 6;
    TRACE = 7;
}
message RequestMapping {
    string path = 61001;
    repeated PathParam pathParams = 61002;
    Method method = 61003;
}

message PathParam {
    string name = 62001;
    google.protobuf.Field.Kind type = 62002;
}